// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitConfig > emits stable v5 config for basic 1`] = `
"// Generated by @keyshelf/migrate from v4 keyshelf.yaml and .keyshelf/*.yaml.
// Review groups, provider bindings, and the secret rebind commands in the migration report.

import { defineConfig, age, config, secret } from "keyshelf/config";

export default defineConfig({
  name: "demo-app",
  envs: ["dev"],
  // TODO: Add v5 groups and assign group names to records as needed.
  groups: [],
  keys: {
    "api/url": "https://api.example.com",
    "db/host": config({
      default: "localhost",
      values: {
        dev: "dev-db.local",
      },
    }),
    "db/password": secret({
      default: age({
        identityFile: "./keys/dev.txt",
        secretsDir: "./.keyshelf/secrets/dev",
      }),
    }),
    "db/port": "5432",
  }
});
"
`;

exports[`emitConfig > emits stable v5 config for multi-env 1`] = `
"// Generated by @keyshelf/migrate from v4 keyshelf.yaml and .keyshelf/*.yaml.
// Review groups, provider bindings, and the secret rebind commands in the migration report.

import { defineConfig, age, config, gcp, secret } from "keyshelf/config";

export default defineConfig({
  name: "platform",
  envs: ["dev", "production"],
  // TODO: Add v5 groups and assign group names to records as needed.
  groups: [],
  keys: {
    "api/token": secret({
      values: {
        dev: age({
          identityFile: "./keys/default.txt",
          secretsDir: "./.keyshelf/secrets/dev",
        }),
        production: gcp({
          project: "prod-project",
        }),
      },
    }),
    "api/url": config({
      default: "https://api.example.com",
      values: {
        dev: "https://dev.api.example.com",
      },
    }),
    "worker/token": secret({
      values: {
        dev: age({
          identityFile: "./keys/default.txt",
          secretsDir: "./.keyshelf/secrets/worker-dev",
        }),
        production: gcp({
          project: "prod-project",
        }),
      },
    }),
  }
});
"
`;

exports[`emitConfig > emits stable v5 config for name-rename 1`] = `
"// Generated by @keyshelf/migrate from v4 keyshelf.yaml and .keyshelf/*.yaml.
// Review groups, provider bindings, and the secret rebind commands in the migration report.

import { defineConfig, gcp, secret } from "keyshelf/config";

export default defineConfig({
  name: "My_Project",
  envs: ["dev"],
  // TODO: Add v5 groups and assign group names to records as needed.
  groups: [],
  keys: {
    "token": secret({
      default: gcp({
        project: "dev-project",
      }),
    }),
  }
});
"
`;

exports[`emitConfig > emits stable v5 config for nested 1`] = `
"// Generated by @keyshelf/migrate from v4 keyshelf.yaml and .keyshelf/*.yaml.
// Review groups, provider bindings, and the secret rebind commands in the migration report.

import { defineConfig, age, config, secret } from "keyshelf/config";

export default defineConfig({
  name: "nested-demo",
  envs: ["dev"],
  // TODO: Add v5 groups and assign group names to records as needed.
  groups: [],
  keys: {
    "services/api/host": config({
      default: "localhost",
      values: {
        dev: "dev-api.local",
      },
    }),
    "services/api/port": "8080",
    "services/api/token": secret({
      default: age({
        identityFile: "./keys/dev.txt",
        secretsDir: "./.keyshelf/secrets/dev",
      }),
    }),
    "services/web/public-url": config({
      default: "http://localhost:3000",
      values: {
        dev: "https://dev.example.com",
      },
    }),
  }
});
"
`;

exports[`emitConfig > emits stable v5 config for optional 1`] = `
"// Generated by @keyshelf/migrate from v4 keyshelf.yaml and .keyshelf/*.yaml.
// Review groups, provider bindings, and the secret rebind commands in the migration report.

import { defineConfig, config, secret, sops } from "keyshelf/config";

export default defineConfig({
  name: "optional-demo",
  envs: ["dev"],
  // TODO: Add v5 groups and assign group names to records as needed.
  groups: [],
  keys: {
    "analytics/key": secret({
      optional: true,
      default: sops({
        identityFile: "./keys/dev.txt",
        secretsFile: "./.keyshelf/secrets/dev.json",
      }),
    }),
    "app/mode": config({
      default: "development",
      values: {
        dev: "local",
      },
    }),
  }
});
"
`;
